src/index.css
@import 'https://fonts.googleapis.com/css?family=Lato:300';

body {
  margin: 0;
  padding: 0;
  font-family: 'Lato', sans-serif;
  background-color: black;
  text-align: center;
  font-size: 150%;
}

.wrapper {
  width: 100%;
}

